[package]
name = "ics-proxy"
version = "0.1.0"
authors = ["Vlad Jidkov <vladjdk@gmail.com", "Terra Money <core@terra.money>"]
edition = "2021"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[package.metadata.scripts]
optimize = """
docker run --rm -v "$(pwd)":/code \
  --mount type=volume,source="$(basename "$(pwd)")_cache",target=/target \
  --mount type=volume,source=registry_cache,target=/usr/local/cargo/registry \
  cosmwasm/rust-optimizer-arm64:0.14.0
"""

[dependencies]
cosmwasm-std = { version = "1.0.1", features = ["staking", "stargate"] }
cosmwasm-storage = "1.0"
cosmwasm-schema = "1.0"
base64 = "0.21.0"
cw-asset = "3.0.0"
cw-storage-plus = "1.0.0"
cw2 = "1.0.0"
cw20 = "1.0.0"
json-codec-wasm = "0.1.0"
schemars = "0.8"
prost = "0.11.9"
serde-json-wasm = "0.5.1"
thiserror = "1"
bech32-no_std = "0.7.3"
sha2 = "0.10.8"

[dev-dependencies]
cw-multi-test = "0.16.0"
